<resources>
    <string name="app_name">BookBox</string>
    <string name="placeholder">Lorem Ipsum</string>
    <string name="welcome_message">Welcome to BookBox</string>
    <string name="account_registration">Account Registration</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="register_button">Create account</string>
    <string name="not_registered">Not registered?</string>
    <string name="bookbox">BookBox</string>
    <string name="lists">List</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="search">Search</string>
    <string name="add_book">Add Book</string>
    <string name="scan_book">Scan Book</string>
    <string name="number_of_notifications">You have 0 new notifications!</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="confirm">Confirm</string>
    <string name="scanning">Scanning</string>
    <string name="scan_isbn">Scan the ISBN</string>
    <string name="login_verify">Verifying…</string>
    <string name="login_login">Logging in…</string>
    <string name="back">back</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="add_book_picture">Add_book_picture</string>
    <string name="Title_hint">Enter title</string>
    <string name="Author_hint">Enter author</string>
    <string name="ISBN_hint">Enter ISBN</string>
    <string name="add_an_awesome_book">Add an awesome book!</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view_requests">View Requests</string>
    <string name="outgoing_requests">Outgoing Requests</string>
    <string name="CheckBox">Checkbox</string>
    <string name="number_of_accepted">You have 2 new accepted request(s)</string>
    <string name="accepted_requests">Accepted Requests</string>
    <string name="borrowed">Borrowed Books</string>
    <string name="number_of_borrowed">You have 18 borrowed books.</string>
    <string name="Categories">Pick your favourite categories!</string>
    <string name="Skip">Skip >></string>
    <string name="Category6">CheckBox</string>
    <string name="Category1">Category 1</string>
    <string name="category5">Category 5</string>
    <string name="category4">Category 4</string>
    <string name="category3">Category 3</string>
    <string name="category2">Category 2</string>
    <string name="category6">Category 6</string>
    <string name="image6">image6</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="image1">image1</string>
    <string name="owner">Owner:</string>
    <string name="listUsername">Username:</string>
    <string name="borrower">Borrower:</string>
    <string name="bookbox_item">Bookbox Item</string>
    <string name="request">Request</string>
    <string name="enter_text">Search bookbox</string>
    <string name="enter_text_profile">Search Users</string>
    <string name="results">Results</string>

    <string-array name="filter_statuses">
        <item>Filter by</item>
        <item>All</item>
        <item>Accepted</item>
        <item>Available</item>
        <item>Borrowed</item>
        <item>Requested</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results">No results found</string>
    <string name="change_picture">Change picture</string>
    <string name="delete_pic_dialog_text">Are you sure you want to remove this picture?</string>
    <string name="fragment_update_phone_new_phone_number">New Phone Number</string>
    <string name="fragment_update_email_enter_email">Enter email</string>
    <string name="fragment_update_password_new_password">New Password</string>
    <string name="fragment_update_password_confirm_password">Confirm Password</string>
    <string name="fragment_update_phone_title">Update Phone</string>
    <string name="fragment_update_email_title">Update Email</string>
    <string name="fragment_update_password_title">Update Password</string>
    <string name="logout">Logout</string>
    <string name="requests">Requests</string>
    <string name="requested_by">Requested by:</string>
    <string name="data">Date:</string>
    <string name="accept_decline_request">Accept or Decline request?</string>
    <string name="requested">Requested</string>
    <string name="set_Location">Set Location</string>
    <string name="scan_to_hand_over">Hand Over</string>
    <string name="API_KEY" translatable="false">AIzaSyD0QFgKt8W1VjpebBqwmfdSKbki2DS73PI</string>
    <string name="view_location">View Location</string>
    <string name="scan">Scan</string>
    <string name="or">OR</string>
    <string name="title_activity_list2">List2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="accepted">ACCEPTED</string>
    <string name="accepted_request">Accepted Request</string>
    <string name="return_book">Return</string>
    <string name="see_location">See Location</string>
    <string name="receive">Receive</string>
    <string name="cancel_2">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="keep_scanning">Keep scanning</string>
</resources>