<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_nav_bar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_book_textview"
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/bookbox_item"
                android:textAlignment="center"
                android:textColor="@color/colorPurpleTitle"
                android:textSize="35sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:id="@+id/linear_layout_add_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/book_picture_imageView"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:contentDescription="@string/add_book_picture"
                    android:padding="5dp"
                    android:src="@drawable/ic_custom_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/add_book_picture_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorBlueMessage"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:text="@string/add_picture" />

                    <Button
                        android:id="@+id/remove_book_picture_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:padding="8dp"
                        android:enabled="false"
                        android:textColor="@color/colorBlueMessage"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:text="@string/remove_picture" />

                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/edit_title_editText"
                android:layout_width="335dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:autofillHints="@string/Title_hint"
                android:hint="@string/title"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_author_editText"
                android:layout_width="335dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:autofillHints="@string/Author_hint"
                android:hint="@string/author"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_isbn_editText"
                android:layout_width="335dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:autofillHints="@string/ISBN_hint"
                android:hint="@string/isbn"
                android:inputType="number"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit_book_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/placeholder"
                    android:textColor="@color/colorBlueMessage"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/edit_book_Borrower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:text="@string/placeholder"
                    android:textColor="@color/colorBlueMessage"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/edit_book_Owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/placeholder"
                    android:textColor="@color/colorBlueMessage" />

        </LinearLayout>

            <Button
                android:id="@+id/edit_book_request_book"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPurpleTitle"
                android:text="@string/request"
                android:textColor="@color/colorWhiteBgd"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/edit_book_update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:text="@string/update"
                    android:background="@color/colorBlueMessage"
                    style="@android:attr/buttonBarButtonStyle"
                    android:textColor="@color/colorWhiteBgd"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/edit_book_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:text="@string/delete"
                    android:background="@color/colorBlueMessage"
                    style="@android:attr/buttonBarButtonStyle"
                    android:textColor="@color/colorWhiteBgd"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/edit_book_requests_button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/view_requests"
                    android:background="@color/colorBlueMessage"
                    style="@android:attr/buttonBarButtonStyle"
                    android:textColor="@color/colorWhiteBgd"
                    android:textSize="15sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/add_book_warning_msg"
                android:layout_width="335dp"
                android:layout_height="57dp"
                android:text="@string/placeholder"
                android:textSize="20sp"
                android:textColor="@color/colorRedMessage"
                android:layout_marginStart="40dp"
                android:visibility="gone"
                android:textAlignment="textStart" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@drawable/bottom_nav_bar_selector"
        app:itemTextColor="@drawable/bottom_nav_bar_selector"
        app:itemIconSize="50sp"
        android:background="@color/colorWhiteBgd"
        app:menu="@menu/bottom_nav_bar" />

</RelativeLayout>