<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/update_password_old_poassword_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:ems="10"
        android:layout_margin="8dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/update_password_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_update_password_new_password"
        android:ems="10"
        android:layout_margin="8dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/update_password_password_confirm_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_update_password_confirm_password"
        android:ems="10"
        android:layout_margin="8dp"
        android:inputType="textPassword" />

</LinearLayout>