<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/welcome_to_bookbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/welcome_message"
        android:textColor="@color/colorPurpleTitle"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/email_hint"
        android:hint="@string/email_hint"
        android:layout_below="@id/welcome_to_bookbox"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_below="@+id/username_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:autofillHints="@string/password_hint"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_editText"
        android:text="@string/log_in_button"
        android:textColor="@color/colorWhiteBgd"
        android:background="@color/colorPurpleTitle"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/not_registered_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:layout_margin="8dp"
            android:textColor="@color/colorDarkText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlueMessage"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>